[project]
name = "diorama-generator"
version = "0.1.0"
description = "3D-printable dioramas of Switzerland from a coordinate + radius: swisstopo terrain, buildings, roads & water, out to .blend and colored .3mf"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "manifold3d>=3.5.2",
    "mapbox-earcut>=2.0.0",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "pyproj>=3.7.2",
    "python-dotenv>=1.0.1",
    "rasterio>=1.5.0",
    "rich>=15.0.0",
    "rtree>=1.4.1",
    "scipy>=1.18.0",
    "shapely>=2.1.2",
    "trimesh>=4.12.2",
    "typer>=0.26.8",
]

[project.scripts]
diorama = "diorama_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diorama_generator"]
